--- a/data/equipment/equipment-00-csfJtggwGCF28U2j.htm
+++ b/data/equipment/equipment-00-csfJtggwGCF28U2j.htm
@@ -1,6 +1,6 @@
 Name: Musical Instrument (Heavy)
-Nom: 
-État: auto-trad
+Nom: Instrument de musique (Lourd)
+État: officielle
 
 ------ Description (en) ------
 <p>Handheld instruments include bagpipes, a small set of chimes, small drums, fiddles and viols, flutes and recorders, small harps, lutes, trumpets, and similarly sized instruments. The GM might rule that an especially large handheld instrument (like a tuba) has greater Bulk. Heavy instruments such as large drums, a full set of chimes, and keyboard instruments are less portable and generally need to be stationary while played.</p>
