--- a/data/equipment/equipment-00-C1j0Zs26TPVjplbs.htm
+++ b/data/equipment/equipment-00-C1j0Zs26TPVjplbs.htm
@@ -9,4 +9,4 @@ Nom: Jeu de carte du Tourment (Simple)
 ------ Description (fr) ------
 <p>Utilisé par les parieurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
-<p>Les <em>jeux de carte du Tourment (simples)</em> sont fabriqués à partir de papier de faible qualité et ne comportent généralement qu'une icône et un chiffre pour signifier la couleur et l'alignement. Ces jeux simples sont surtout utilisés pour les jeux de hasard, car l'image réelle et la signification des cartes n'ont pas d'importance pour ces jeux.</p>
+<p>Les simples jeux de carte du Tourment sont fabriqués à partir de papier de faible qualité et ne comportent généralement qu'une icône et un chiffre pour signifier la couleur et l'alignement. Ces jeux simples sont surtout utilisés pour les jeux de hasard, car l'image réelle et la signification des cartes n'ont pas d'importance pour ces jeux.</p>
