--- a/data/equipment/equipment-00-B3aJa0csNZOGXLXT.htm
+++ b/data/equipment/equipment-00-B3aJa0csNZOGXLXT.htm
@@ -9,4 +9,4 @@ Nom: Jeu de carte du Tourment (Commun)
 ------ Description (fr) ------
 <p>Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
-<p>Les <em>jeux de carte du Tourment (communs)</em> sont fabriqués à partir d'un papier de meilleure qualité et comportent des illustrations. Les liseurs du Tourment utilisent généralement ces jeux.</p>
+<p>Les jeux de carte du Tourment communs sont fabriqués à partir d'un papier de meilleure qualité et comportent des illustrations. Les liseurs du Tourment utilisent généralement ces jeux.</p>
