--- a/data/spells/evocation-01-Rn2LkoSq1XhLsODV.htm
+++ b/data/spells/evocation-01-Rn2LkoSq1XhLsODV.htm
@@ -12,12 +12,12 @@ Nom: Frappe de débris
 <hr />
 <p><strong>Heightened (+1)</strong> Increase the damage by 2d4.</p>
 ------ Description (fr) ------
-<p>Une aspersion de lourdes pierre vole dans les airs en face de vous.</p>
-<p>Les gravats infligent [[/r 2d4 #contondants]] dégâts contondants à chaque créature dans la zone. Chaque créature doivent tenterun jet de Réflexes.</p>
+<p>Une pluie de lourdes pierres vole dans les airs face à vous.</p>
+<p>Les gravats infligent [[/r 2d4 #contondants]] dégâts contondants à chaque créature dans la zone. Chaque créature doivent tenter un jet de Réflexes.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts.</p>
-<p><strong>Échec</strong> La créature subit la totalité des dégâts est est poussé de 1,5 m en face de vous.</p>
-<p><strong>Échec critique</strong> La créature subit le double des dégâts et est poussé de 3 m en face de vous.</p>
+<p><strong>Échec</strong> La créature subit la totalité des dégâts et est poussé de 1,5 m en face de vous.</p>
+<p><strong>Échec critique</strong> La créature subit le double des dégâts et est poussée de 3 m en face de vous.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> Augmentez les dégâts de 2d4.</p>
+<p><strong>Intensifié (+1)</strong> les dégâts augmentent de 2d4.</p>
