Environnement de prédilection

--- a/data/feats/class-02-sgo7J9BVofBqwlsF.htm
+++ b/data/feats/class-02-sgo7J9BVofBqwlsF.htm
@@ -30,15 +30,15 @@ Avantage: Vous avez étudié un terrain spécifique pour en surmonter les diffic
 <p>Choisissez votre environnement de prédilection parmi les suivants : aquatique, arctique, désert, forêt, montagne, plaine, ciel, marais ou souterrain. Dans cet environnement, vous ignorez les effets des terrains difficiles non magiques.</p>
 <p>Si vous avez la capacité de classe déplacement facilité en milieu naturel, vous bénéficiez d’un second avantage, déterminé par votre choix, lorsque vous évoluez dans votre environnement de prédilection.</p>
 <ul>
-<li><strong>Aquatique</strong> YVous obtenez une vitesse de nage égale à votre Vitesse. Si vous avez déjà une vitesse de nage, vous obtenez un bonus de statut de +3m à votre vitesse de nage.</li>
-<li><strong>Arctique</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme cold, and you can walk across ice and snow at full Speed without needing to Balance.</li>
-    <li><strong>Desert</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme heat, and you can walk along sand at full Speed without needing to Balance.</li>
-    <li><strong>Forest, Mountain, or Underground</strong> You gain a climb Speed equal to your Speed. If you already had a climb Speed, you gain a +10-foot status bonus to your climb Speed.</li>
-    <li><strong>Plains</strong> You gain a +10-foot status bonus to your land Speed.</li>
-    <li><strong>Sky</strong> You gain a +10-foot status bonus to your fly Speed, if you have one.</li>
-    <li><strong>Swamp</strong> You can move across bogs at full Speed, even if they are deep enough to be greater difficult terrain or to normally require you to Swim.</li>
-    </ul>
+<li><strong>Aquatique</strong> Vous obtenez une vitesse de nage égale à votre Vitesse. Si vous avez déjà une vitesse de nage, vous obtenez un bonus de statut de +3m à votre vitesse de nage.</li>
+<li><strong>Arctique</strong> Vous n'avez besoin de manger et de boire qu'un dixième de la normale, Vous n'êtes pas affecté par le froid sévère ou extrème et vous pouvez traverser la glace et la neige à votre pleine vitesse sans avoir besoin de Garder l'équilibre.</li>
+<li><strong>Ciel</strong> Vous obtenez un bonus de statut de +3 m à votre vitesse de vol, si vous en avez une.</li>
+<li><strong>Désert</strong> Vous n'avez besoin de manger et de boire qu'un dixième de la normale, Vous n'êtes pas affecté par la chaleur sévère ou extrème et vous pouvez marcher dans le sable à votre pleine vitesse  sans avoir besoin de Garder l'équilibre.</li>
+<li><strong>Forêt, Montagne ou Souterrain</strong> Vous obtenez une vitesse d'Escalade égale à votre Vitesse. Si vous avez déjà une vitesse d'escalade, vous obtenez un bonus de statut de +3m à votre vitesse d'Escalade.</li>
+<li><strong>Marais</strong> Vous pouvez vous déplacer à travers les tourbières à pleine vitesse, même si elles sont suffisamment profondes pour être un terrain très difficile ou pour nécessiter normalement que vous nagiez.</li>
+<li><strong>Plaines</strong> Vous obtenez un bonus de statut de +3 m à votre Vitesse.</li>
+</ul>
 <p>@Compendium[pf2e.feat-effects.sDftJWPPSUeSZD3A]{Environnement de prédilection (Obtenir une vitesse d'escalade)}</p>
-<p>@Compendium[pf2e.feat-effects.IpRfT9lL3YR6MH6w]{Environnement de prédilection (Améliorer la vitesse d'escalade Climb Speed)}</p>
+<p>@Compendium[pf2e.feat-effects.IpRfT9lL3YR6MH6w]{Environnement de prédilection (Augmenter la vitesse d'escalade)}</p>
 <p>@Compendium[pf2e.feat-effects.OhLcaJeQy4Nf5Mwo]{Environnement de prédilection (Obtenir une vitesse de nage)}</p>
 <p>@Compendium[pf2e.feat-effects.HKPmrxkZwHRND5Um]{Environnement de prédilection (Augmenter la vitesse de nage)}</p>
