révision sorts et dons

--- a/data/feats/class-04-4PvmSnyp3URIqJUM.htm
+++ b/data/feats/class-04-4PvmSnyp3URIqJUM.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You jump back and fire a quick shot that catches your opponent off guard.
-Avantage: Vous sautez en arrière et tirez un coup rapide qui prend votre adversaire au dépourvu.
+Avantage: Vos armes à distance prennent vos adversaires au dépourvu.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a loaded ranged weapon or a ranged weapon with reload 0.</p>
