--- a/data/feats/class-04-3y459uK2qfWtS9q4.htm
+++ b/data/feats/class-04-3y459uK2qfWtS9q4.htm
@@ -6,13 +6,13 @@ PrereqFR: Posture Toujours en position
 
 ------ Benefits and spoiler ----
 Benefits: Your follow-up blow leaves you an opening to set your shield.
-Avantage: Votre coup de suivi vous laisse une ouverture pour mettre votre bouclier.
+Avantage: Frapper avec votre bouclier vous conserve sa protection.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a shield in two hands.</p>
 <hr />
 <p>Your follow-up blow leaves you an opening to set your shield. Make a Strike with the wielded shield. If the Strike hits and deals damage, you also @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Raise your Shield}.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> vous maniez un bouclier avec vos deux mains.<br></span></p>
+<p><strong>Conditions</strong> vous maniez un bouclier avec vos deux mains.</p>
 <hr />
 <p>Votre coup vous procure une ouverture pour pouvoir placer votre bouclier en position de défense. Faites une Frappe avec le bouclier porté. Si la Frappe touche et inflige des dégâts, vous @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Levez votre bouclier} également.</p>
