--- a/data/feats/class-04-9j90iE61ZToFR8cu.htm
+++ b/data/feats/class-04-9j90iE61ZToFR8cu.htm
@@ -6,7 +6,7 @@ PrereqFR: lien arcanique
 
 ------ Benefits and spoiler ----
 Benefits: You're mystically connected to your bonded item and can call it to your hand.
-Avantage: Vous êtes mystiquement connecté à votre objet lié et pouvez l'appeler dans votre main.
+Avantage: Vous pouvez téléporter votre objet lié à vous.
 
 ------ Description (en) ------
 <p>You're mystically connected to your bonded item and can call it to your hand. If your bonded item is 1 Bulk or less, you teleport your bonded item into your hand from up to 1 mile away.</p>
