--- a/data/spells/enchantment-04-kF0rs9mCPvJGfAZE.htm
+++ b/data/spells/enchantment-04-kF0rs9mCPvJGfAZE.htm
@@ -16,5 +16,7 @@ Nom: Inspiration héroïque
 <p>Si votre prochaine action est de lancer @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{inspiration vaillante} ou @Compendium[pf2e.spells-srd.bH0kPuf7UKxRvi2P]{inspiration défensive}, effectuez un test de Représentation. Le DD est généralement un DD très difficile d’un niveau égal à celui de la cible de votre composition ayant le plus haut niveau, mais le MJ peut assigner un DD différent en fonction des circonstances. L’effet de votre composition <em>inspiration vaillante</em> ou de votre <em>inspiration défensive</em> dépend du résultat de votre test.</p>
 <hr>
 <p><strong>Succès critique</strong> Le bonus de statut de votre inspiration vaillante ou inspiration défensive augmente à +3.</p>
+<p>@Compendium[pf2e.spell-effects.VFereWC1agrwgzPL]{Effet : Succès critique sur inspiration vaillante}, @Compendium[pf2e.spell-effects.BKam63zT98iWMJH7]{Effet : Succès critiquee sur inspiration défensive}</p>
 <p><strong>Succès</strong> Le bonus de statut de votre inspiration vaillante ou inspiration défensive augmente à +2.</p>
+<p>@Compendium[pf2e.spell-effects.kZ39XWJA3RBDTnqG]{Effet : Succès sur inspiration vaillante}, @Compendium[pf2e.spell-effects.Chol7ExtoN2T36mP]{Effet : Succès sur inspiration défensive}</p>
 <p><strong>Échec</strong> Votre inspiration vaillante ou inspiration défensive apporte seulement son bonus normal de +1, mais vous ne dépensez pas le point de focalisation pour lancer ce sort.</p>
