révision dons de classe 04

--- a/data/feats/class-04-011wnYpjIwCEzFtl.htm
+++ b/data/feats/class-04-011wnYpjIwCEzFtl.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can call the four elements to you.
-Avantage: Vous pouvez appeler les quatre éléments à vous.
+Avantage: Vous pouvez lancer le sort Convocation d'élémentaire.
 
 ------ Description (en) ------
 <p>You can call the four elements to you.</p>
