--- a/data/feats/class-04-39CqlOzlHjEhh0E4.htm
+++ b/data/feats/class-04-39CqlOzlHjEhh0E4.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: You make an attack to knock a foe off balance, then follow up immediately with a sweep to topple them.
-Avantage: Vous effectuez une attaque pour déséquilibrer votre adversaire, puis vous enchaînez immédiatement avec un balayage pour le faire basculer.
+Avantage: Vos coups peuvent mettre À terre vos adversaires.
 
 ------ Description (en) ------
 <p>You make an attack to knock a foe off balance, then follow up immediately with a sweep to topple them.</p>
