--- a/data/feats/class-04-9SdFlVQW4vM8ggh8.htm
+++ b/data/feats/class-04-9SdFlVQW4vM8ggh8.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Discrétion
 
 ------ Benefits and spoiler ----
 Benefits: A good getaway requires a good distraction
-Avantage: Une bonne escapade nécessite une bonne distraction
+Avantage: Vous êtes Masqué puis Furtif jusqu'à la fin du tour.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a deck of playing cards in your possession.</p>
@@ -15,4 +15,4 @@ Avantage: Une bonne escapade nécessite une bonne distraction
 ------ Description (fr) ------
 <p><strong>Conditions</strong> vous avez un paquet de cartes à jouer en votre possession.</p>
 <hr />
-<p>Une bonne évasion nécessite une bonne distraction. Vous Intéragissez pour tirer un paquet de cartes et vous le lancez en l'air en une explosion papillonnante, vous rendant brièvement @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} de toutes les autres créatures utilisant leur vision comme sens précis et alors vous êtes Furtif. Vous êtes suffisamment masqué pour être Furtif jusqu'à la fin de votre tour. Cela laisse toutes les cartes du paquet éparpillées dans la pièce ; les rassembler de nouveau prend plusieurs minutes.</p>
+<p>Une bonne évasion nécessite une bonne distraction. Vous Interagissez pour tirer un paquet de cartes et vous le lancez en l'air en une explosion papillonnante, vous rendant brièvement @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} de toutes les autres créatures utilisant leur vision comme sens précis, puis vous êtes Furtif. Vous êtes suffisamment Masqué pour être Furtif jusqu'à la fin de votre tour. Cela laisse toutes les cartes du paquet éparpillées dans la pièce ; les rassembler de nouveau prend plusieurs minutes.</p>
