--- a/data/feats/class-04-B0T6p3kcrOfSvLqQ.htm
+++ b/data/feats/class-04-B0T6p3kcrOfSvLqQ.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You learn to speed up yourself and your allies with your performance.
-Avantage: Vous apprenez à accélérer vos performances et celles de vos alliés.
+Avantage: VVous apprenez le tour de magie de composition À trois temps.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.c8R2fpk88fBwJ1ie]{Triple Time} composition cantrip, which speeds up you and your allies for a round.</p>
 ------ Description (fr) ------
-<p>Vous apprenez le tour de magie de composition @Compendium[pf2e.spells-srd.c8R2fpk88fBwJ1ie]{à trois temps} qui augmente votre rapidité et celle de vos alliés pendant un round.</p>
+<p>Vous apprenez le tour de magie de composition @Compendium[pf2e.spells-srd.c8R2fpk88fBwJ1ie]{À trois temps} qui augmente votre rapidité et celle de vos alliés pendant un round.</p>
