--- a/data/feats/class-04-agfosPInBLQXNQfa.htm
+++ b/data/feats/class-04-agfosPInBLQXNQfa.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Make an unarmed melee attack against a prone target.
-Avantage: Effectuez une attaque de mêlée sans arme contre une cible allongée.
+Avantage: Une Frappe à mains nues rend une cible à terre Prise au dépourvu.
 
 ------ Description (en) ------
 <p>Make an unarmed melee attack against a @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{Prone} target.</p>
