--- a/data/feats/class-04-cEu8BUS41dlPyPGW.htm
+++ b/data/feats/class-04-cEu8BUS41dlPyPGW.htm
@@ -6,7 +6,7 @@ PrereqFR: Instinct spirituel
 
 ------ Benefits and spoiler ----
 Benefits: Though no one sees them and only you can hear them, the spirits around you constantly chatter, save when you are raging.
-Avantage: Bien que personne ne les voie et que vous soyez le seul à les entendre, les esprits qui vous entourent discutent constamment, sauf lorsque vous êtes en colère.
+Avantage: Une fois par jour, vous pouvez relancer un test de Perception ou de compétence.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
