--- a/data/feats/class-04-aiHbS8FGNYAQBF62.htm
+++ b/data/feats/class-04-aiHbS8FGNYAQBF62.htm
@@ -6,7 +6,7 @@ PrereqFR: sort de dévotion (Imposition des mains)
 
 ------ Benefits and spoiler ----
 Benefits: Your healing energies are infused with bounding energy.
-Avantage: Vos énergies de guérison sont imprégnées d'une énergie débordante.
+Avantage: Votre imposition des mains améliore la Vitesse de la cible.
 
 ------ Description (en) ------
 <p>Your healing energies are infused with bounding energy. A creature that recovers Hit Points from your @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} gains a +10-foot status bonus to its Speed until the end of its next turn.</p>
