--- a/data/feats/class-04-baz18CdB13DVMHV9.htm
+++ b/data/feats/class-04-baz18CdB13DVMHV9.htm
@@ -6,7 +6,7 @@ PrereqFR: ordre de la feuille
 
 ------ Benefits and spoiler ----
 Benefits: The leaf order's secrets allow your familiar to take advantage of its leshy form.
-Avantage: Les secrets de l'ordre des feuilles permettent à votre familier de tirer parti de sa forme léthargique.
+Avantage: Votre familier léchi obtient chaque jour un pouvoir de familier léchi différent.
 
 ------ Description (en) ------
 <p>The leaf order's secrets allow your familiar to take advantage of its leshy form. You can select one additional familiar ability each day, which must be one of the following leshy familiar abilities. You can't select more than one leshy familiar ability at a time.</p>
@@ -16,7 +16,7 @@ Avantage: Les secrets de l'ordre des feuilles permettent à votre familier de ti
 <li><strong>@Compendium[pf2e.familiar-abilities.SKIS1xexaOvrecdV]{Verdant Burst}</strong> When your familiar dies,it releases its primal energy to cast the 3-action version of @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal}, heightened to a level 1 lower than your highest-level spell slot. The <em>heal</em> spell gains a status bonus equal to twice the spell's level to the Hit Points it restores to plants. You must be able to cast 2nd-level spells using spell slots to select this familiar ability.</li>
 </ul>
 ------ Description (fr) ------
-<p>Les secrets de l'ordre de la feuille permettent à votre familier de tirer parti de sa forme de léchi. Vous pouvez choisir une capacité de familier supplémentaire chaque jour , qui doit être une des capacités de familier léchi suivantes. Vous ne pouvez choisir plus d'une capacité de familier léchi en même temps.</p>
+<p>Les secrets de l'ordre de la feuille permettent à votre familier de tirer parti de sa forme de léchi. Vous pouvez choisir une capacité de familier supplémentaire chaque jour, qui doit être une des capacités de familier léchi suivantes. Vous ne pouvez choisir plus d'une capacité de familier léchi en même temps.</p>
 <ul>
 <li><strong>@Compendium[pf2e.familiar-abilities.SKIS1xexaOvrecdV]{Explosion verdoyante}</strong> Lorsque votre familier meurt, il relâche son énergie primordiale pour lancer la version de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} à trois actions, intensifié à un niveau de 1 inférieur à votre plus haut emplacement de sort. Le sort <em>Guérison</em> obtient aussi un bonus de statut égal à deux fois le niveau de sort au nombre de Points de vie qu'il redonne aux plantes. Vous devez être capable de lancer les sorts de niveau 2 en utilisant des emplacements de sort pour choisir cette aptitude de familier.</li>
 <li><strong>@Compendium[pf2e.familiar-abilities.43xB5UnexISlfRa5]{Purificateur d'Air}</strong> Votre familier recycle l'air, fournissant assez d'oxygène à une créature de taille Moyenne dans les zones avec de l'air vicié, tel qu'une chambre scellée ou un espace extradimensionnel. Si le léchi est dans la zone d'un effet de poison inhalé ou d'un effet qui compte sur l'odorat, les créatures dans une émanation de 4,5 m du léchi obtiennent un bonus de circonstances de +2 à leur jet de sauvegarde contre l'effet.</li>
