--- a/data/equipment/consumable-00-I2ZbXsfm0c9Eep4I.htm
+++ b/data/equipment/consumable-00-I2ZbXsfm0c9Eep4I.htm
@@ -19,8 +19,8 @@ Nom: Grolna
 Cette drogue de couleur vert sombre, fabriquée par les calignis suralimente les sens olfactifs des créatures au prix d'un affaiblissement de leur esprit. Populaire dans les Ténèbres pour sa capacité à transformer des odeurs et des saveurs normalement ennuyeuses en expériences intenses et euphoriques, le Grolna peut également être d'une grande aide pour les traqueurs qui souhaitent suivre des pistes olfactives, transformant des humanoïdes ordinaires en de véritables limiers.
 <p>La prise d'une dose supplémentaire de Grolna alors que l'on est affecté par ses effets au stade 1 du fait d'une précédente dose réinitialise la durée du stade 1 et repousse l'apparition des effets du stade 2.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 13 Vigueur</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 13;</p>
 <p><strong>Début</strong> 1 minute;</p>
 <p><strong>Durée maximale</strong> 8 heures;</p>
 <p><strong>Stade 1</strong> gagne odorat (imprécis) à 9 mètres, gagne un bonus d'objet de +3 aux tests de Survie pour suivre des pistes, et devient @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 heure);</p>
-<p><strong>Stade 2</strong> stupéfié 2 (6 heures)</p>
+<p><strong>Stade 2</strong> Stupéfié 2 (6 heures)</p>
