--- a/data/equipment/consumable-03-omRmCbkQoK5YmCGv.htm
+++ b/data/equipment/consumable-03-omRmCbkQoK5YmCGv.htm
@@ -7,7 +7,6 @@ Nom: Potion de Riposte acide (inférieure)
 <p>For 1 minute after drinking a potion of acid retaliation, you glow with a faint aura of acid energy, and a creature that touches you (such as by making an unarmed attack or using a spell with a range of touch against you) takes acid damage.</p>
 <p>The aura deals 1d4 acid damage.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'acide.</p>
-L'aura inflige 1d4 points de dégâts d'acide.</p>
+L'aura inflige 1d4 dégâts d'acide.</p>
