--- a/data/equipment/consumable-06-OWPOTwMsrYma9d0v.htm
+++ b/data/equipment/consumable-06-OWPOTwMsrYma9d0v.htm
@@ -9,4 +9,4 @@ Nom: Potion de Riposte acide (modérée)
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'acide.</p>
-L'aura inflige 2d4 points de dégâts d'acide.</p>
+L'aura inflige 2d4 dégâts d'acide.</p>
