révision dons de classe 04

--- a/data/feats/class-04-HHAGiBYVv8nyUEsd.htm
+++ b/data/feats/class-04-HHAGiBYVv8nyUEsd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You snap your free hand over to grip your weapon just long enough to add momentum and deliver a more powerful blow to your opponent.
-Avantage: Vous tendez votre main libre pour saisir votre arme juste assez longtemps pour prendre de l'élan et porter un coup plus puissant à votre adversaire.
+Avantage: Vous utilisez vos armes à deux mains pour augmenter les dégâts.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a one-handed melee weapon and have a free hand.</p>
@@ -18,5 +18,5 @@ Avantage: Vous tendez votre main libre pour saisir votre arme juste assez longte
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez une arme de corps à corps à une main et avez une main libre.</p>
 <hr />
-<p>Vous utilisez brièvement votre main libre pour améliorer la prise de votre arme et lui ajouter juste assez de force pour délivrer un coup plus puissant sur votre adversaire. Effectuez une Frappe avec l’arme requise. Vous changez brièvement votre prise lors de la Frappe afin d’effectuer une attaque à deux mains. Si l’arme n’a normalement pas le trait deux mains, augmentez d’un échelon la taille de son dé de dégâts d’arme pour cette attaque.</p>
+<p>Vous utilisez brièvement votre main libre pour améliorer la prise de votre arme et lui ajoutez juste assez de force pour délivrer un coup plus puissant sur votre adversaire. Effectuez une Frappe avec l’arme requise. Vous changez brièvement votre prise lors de la Frappe afin d’effectuer une attaque à deux mains. Si l’arme n’a normalement pas le trait deux mains, augmentez d’un échelon la taille de son dé de dégâts d’arme pour cette attaque.</p>
 <p>Si l’arme a le trait deux mains, vous bénéficiez de l’avantage de ce trait et d’un bonus de circonstances aux dégâts égal au nombre de dés de dégâts de l’arme. Une fois la Frappe accomplie, votre deuxième main redevient libre et vous continuez de manier votre arme avec une main seulement. Cette action ne met pas fin à votre éventuelle posture ou aux effets des dons de guerrier dont les conditions nécessitent une main libre.</p>
