--- a/data/feats/class-04-IOdk7bOJ4dgYVh9I.htm
+++ b/data/feats/class-04-IOdk7bOJ4dgYVh9I.htm
@@ -6,7 +6,7 @@ PrereqFR: Guérison collective
 
 ------ Benefits and spoiler ----
 Benefits: You can direct excess channeled energy outward to benefit an ally.
-Avantage: Vous pouvez diriger l'excès d'énergie canalisée vers l'extérieur pour en faire bénéficier un allié.
+Avantage: Les points de vie que vous récupérez de Guérison collective peuvent profiter à d'autres créatures.
 
 ------ Description (en) ------
 <p>You can direct excess channeled energy outward to benefit an ally.</p>
