--- a/data/feats/class-04-eXuCYDzj0UJOxNu9.htm
+++ b/data/feats/class-04-eXuCYDzj0UJOxNu9.htm
@@ -6,7 +6,7 @@ PrereqFR: Feinte jumelée
 
 ------ Benefits and spoiler ----
 Benefits: Your movements with two weapons are so swift and disorienting that they befuddle your opponent.
-Avantage: Vos mouvements avec deux armes sont si rapides et désorientants qu'ils désarçonnent votre adversaire.
+Avantage: Feinte jumelée permet de Stupéfier vos adversaires.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding two melee weapons, each in <br />a different hand.</p>
