--- a/data/feats/class-04-fO1vRDEfl9pysfLU.htm
+++ b/data/feats/class-04-fO1vRDEfl9pysfLU.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your guard is up, even while moving.
-Avantage: Votre garde est levée, même en mouvement.
+Avantage: Vous obtenez un bonus de +4 en CA contre les réactions en cas de déplacement.
 
 ------ Description (en) ------
 <p>Your guard is up, even while moving. You gain a +4 circumstance bonus to AC against reactions triggered by your movement.</p>
