--- a/data/feats/class-04-CLKlavik0540j5bl.htm
+++ b/data/feats/class-04-CLKlavik0540j5bl.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You roar in pain, awakening the rage within you.
-Avantage: Vous rugissez de douleur, réveillant la rage qui est en vous.
+Avantage: Subir des dégâts vous met en Rage.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You take damage and are capable of entering a rage</p>
