--- a/data/feats/class-04-DS0XlHfi3ztb3ET7.htm
+++ b/data/feats/class-04-DS0XlHfi3ztb3ET7.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You fragment a ranged spell into a pair of smaller shots.
-Avantage: Vous fragmentez un sort à distance en une paire de tirs plus petits.
+Avantage: Votre sort prend deux cibles au lieu d'une pour moitié de dégâts.
 
 ------ Description (en) ------
 <p>You fragment a ranged spell into a pair of smaller shots. If your next action is to @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast a Spell} without a duration that requires an attack roll against a single target and has no effect beyond dealing damage, you roll a single attack roll and compare the result to the AC of two targets within the spell's range. The spell deals only half its usual damage to each target.</p>
