--- a/data/feats/class-04-DUuCOQ9FiZf7vS5b.htm
+++ b/data/feats/class-04-DUuCOQ9FiZf7vS5b.htm
@@ -6,7 +6,7 @@ PrereqFR: Énigmatique (Muse de barde)|expert en Occultisme
 
 ------ Benefits and spoiler ----
 Benefits: Careful research into the art of rituals has made you better at performing them.
-Avantage: Des recherches approfondies sur l'art des rituels vous ont permis de mieux les exécuter.
+Avantage: Vous obtenez un bonus de circonstances de +2 pour lancer des rituels.
 
 ------ Description (en) ------
 <p>Careful research into the art of rituals has made you better at performing them. You gain a +2 circumstance bonus to all primary and secondary checks you attempt as part of casting a ritual.</p>
