--- a/data/feats/class-04-FdP21jbjHHGpHut1.htm
+++ b/data/feats/class-04-FdP21jbjHHGpHut1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your victims tend to expire long before your poisons, since the latter have been specifically formulated to last longer.
-Avantage: Vos victimes ont tendance à expirer bien avant vos poisons, car ces derniers ont été spécifiquement formulés pour durer plus longtemps.
+Avantage: La durée de vos poisons augmente.
 
 ------ Description (en) ------
 <p>Your victims tend to expire long before your poisons, since the latter have been specifically formulated to last longer. The maximum duration of any poison you create increases by an amount equal to the poison's stage 1 interval, to a maximum of twice the poison's maximum duration.</p>
