--- a/data/feats/class-04-I10dkdvL6kAnqZWA.htm
+++ b/data/feats/class-04-I10dkdvL6kAnqZWA.htm
@@ -1,12 +1,12 @@
 Name: Lie Detector
 Nom: Détecteur de mensonge
 PrereqEN: empiricism or interrogation methodology
-PrereqFR: Méthodologie : Empirisme} ou Méthodologie : Interrogatoire
+PrereqFR: Méthodologie : Empirisme ou Méthodologie : Interrogatoire
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You're adept at noticing the tells of a liar—sweat, flushing, a quavering voice, a quickening pulse.
-Avantage: Vous avez l'habitude de remarquer les signes d'un menteur - sueur, rougissement, voix chevrotante, pouls accéléré.
+Avantage: Vous obtenez un bonus de circonstances de +1 pour Deviner les intentions et repérer les menteurs.
 
 ------ Description (en) ------
 <p>You're adept at noticing the tells of a liar - sweat, flushing, a quavering voice, a quickening pulse.</p>
