--- a/data/feats/class-04-IvgLDtXmZwzbVJj1.htm
+++ b/data/feats/class-04-IvgLDtXmZwzbVJj1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You learn your foes' strengths and weaknesses by watching them move.
-Avantage: Vous apprenez les forces et les faiblesses de vos ennemis en les regardant bouger.
+Avantage: Un coup critique avec Convencoir un stratagème vous permet de repérer une faiblesse de votre ennemi.
 
 ------ Description (en) ------
 <p>You learn your foes' strengths and weaknesses by watching them move. When you critically hit a creature with a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} on which you substituted your attack roll due to @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Devising a Strategem}, the GM chooses one of the following pieces of information about the enemy to tell you.</p>
@@ -18,11 +18,11 @@ Avantage: Vous apprenez les forces et les faiblesses de vos ennemis en les regar
 </ul>
 <p>The GM can choose deliberately or at random, but they can't choose information that doesn't apply (such as choosing an immunity for an enemy that has no immunities). This applies only the first time you critically hit a given creature.</p>
 ------ Description (fr) ------
-<p>Vous apprenez les forces et les faiblesses de vos ennemis en les regardant se déplacer. Lorsque vous obtenez un succès critique pour toucher une créature avec une Frappe à laquelle vous avez substitué votre jet d'attaque @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Concevoir un Stratagème}, le MJ choisit laquelle des informations suivantes il vous donne à propos de l'ennemi.</p>
+<p>Vous apprenez les forces et les faiblesses de vos ennemis en les regardant se déplacer. Lorsque vous obtenez un coup critique pour toucher une créature avec une Frappe à laquelle vous avez substitué votre jet d'attaque @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Concevoir un Stratagème}, le MJ choisit laquelle des informations suivantes il vous donne à propos de l'ennemi.</p>
 <ul>
 <li>Quelle est la plus importante des faiblesses de l'ennemi</li>
 <li>Quelle est la plus importante des résistances de l'ennemi</li>
 <li>Quel jet de sauvegarde de votre ennemi est le plus faible</li>
 <li>Une immunité possédée par l'ennemi</li>
 </ul>
-<p>Le MJ peut choisir délibérément ou de manière aléatoire, mais ne peut choisir une information qui ne s'applique pas (comme choisir une immunité si la cible n'en a aucune). Cela ne s'applique que la première fois quee vous réussissez de manière critique à atteindre une créature donnée.</p>
+<p>Le MJ peut choisir délibérément ou de manière aléatoire, mais ne peut choisir une information qui ne s'applique pas (comme choisir une immunité si la cible n'en a aucune). Cela ne s'applique que la première fois que vous réussissez de manière critique à atteindre une créature donnée.</p>
