--- a/data/feats/class-04-it2i6OXfGIizokpg.htm
+++ b/data/feats/class-04-it2i6OXfGIizokpg.htm
@@ -6,9 +6,9 @@ PrereqFR: sorts de gardien
 
 ------ Benefits and spoiler ----
 Benefits: You are so connected with the animal world that you can grant yourself an animal's features and abilities.
-Avantage: Vous êtes tellement lié au monde animal que vous pouvez vous attribuer les caractéristiques et les capacités d'un animal.
+Avantage: Vous obtenez le sort de gardien Trait animal
 
 ------ Description (en) ------
 <p>You are so connected with the animal world that you can grant yourself an animal's features and abilities. You gain the @Compendium[pf2e.spells-srd.vGEgI8e7AW6FQ3tP]{Animal Feature} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous êtes tellement lié au monde animal que vous pouvvez vous accorder à vous-même des traits et des capacités animales. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.vGEgI8e7AW6FQ3tP]{Trait animal}. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
+<p>Vous êtes tellement lié au monde animal que vous pouvez vous accorder à vous-même des traits et des capacités animales. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.vGEgI8e7AW6FQ3tP]{Trait animal}. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
