--- a/data/feats/class-04-j01dM0ZAC7KzShx0.htm
+++ b/data/feats/class-04-j01dM0ZAC7KzShx0.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your patron grants you the power to summon other creatures to aid you.
-Avantage: Votre patron vous accorde le pouvoir d'invoquer d'autres créatures pour vous aider.
+Avantage: Vous pouvez toujours préparer ou échanger un sort déjà préparé contre un sort de Convocation.
 
 ------ Description (en) ------
 <p>Your patron grants you the power to summon other creatures to aid you.</p>
@@ -14,5 +14,6 @@ Avantage: Votre patron vous accorde le pouvoir d'invoquer d'autres créatures po
 <p>The spell you replaced must be of at least the <em>summon</em> spell's minimum spell level.</p>
 ------ Description (fr) ------
 <p>Votre patron vous accorde le pouvoir de convoquer d'autres créatures pour vous aider.</p>
-<p>Choisissez un sort de <em>Convocation</em> (tel que @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle},...) qui apparaît sur la liste de sort de votre tradition de lanceur de sort. Vous pouvez passer 10 minutes en communion avec votre familier pour remplacer un sort que vous avez préparé dans un des emplacements de sort de sorcière par le sort choisi intensifié au même niveau.</p>
-<p>Le sort que vous remplacez doit être au moins du niveau minimum du sort de <em>convocation</em>.</p>
+<p>Choisissez un sort de Convocation (tel que @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle},...) qui apparaît sur la liste de sort de votre tradition de lanceur de sort.</p>
+<p>Vous pouvez passer 10 minutes en communion avec votre familier pour remplacer un sort que vous avez préparé dans un des emplacements de sort de sorcière par le sort choisi intensifié au même niveau.</p>
+<p>Le sort que vous remplacez doit être au moins du niveau minimum du sort de Convocation.</p>
