--- a/data/feats/class-04-JGfJPx6xkx11zHlW.htm
+++ b/data/feats/class-04-JGfJPx6xkx11zHlW.htm
@@ -6,7 +6,7 @@ PrereqFR: lien arcanique|école arcanique
 
 ------ Benefits and spoiler ----
 Benefits: You have linked your bonded item to the well of energy that powers your school spells.
-Avantage: Tu as relié ton objet lié au puits d'énergie qui alimente tes sorts d'école.
+Avantage: Drainer votre objet lié vous permet de récupérer 1 point de focalisation.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
