--- a/data/feats/class-04-JcXzKwrdMkNszrJQ.htm
+++ b/data/feats/class-04-JcXzKwrdMkNszrJQ.htm
@@ -2,12 +2,11 @@ Name: Radiant Infusion
 Nom: Imprégnation irradiante
 PrereqEN: good alignment|healing font
 PrereqFR: alignement bon|source de guérison
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You pour invigorating positive energy into a living ally.
-Avantage: Vous remplissez d'énergie positive un allié vivant.
+Avantage: Lorsque vous utilisez Guérison pour soigner un allié, il inflige des dégâts positifs.
 
 ------ Description (en) ------
 <p>You pour invigorating positive energy into a living ally.</p>
@@ -15,4 +14,5 @@ Avantage: Vous remplissez d'énergie positive un allié vivant.
 <p>@Compendium[pf2e.feat-effects.cH8JD3ub4eEKuIAD]{Effect: Radiant Infusion}</p>
 ------ Description (fr) ------
 <p>Vous remplissez d'énergie positive revigorante un allié vivant. Si la prochaine action que vous utilisez consiste à lancer @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} pour restaurer des Points de vie à une unique créature vivante, la cible inflige [[/r 1d6 #positif]] dégâts positifs supplémentaires avec ses armes de mêlée et ses attaques à mains nues jusqu'à la fin de son prochain tour.</p>
-<p>Si le sort de <em>Guérison</em> est d'au moins du niveau 5, ces dégâts passent à [[/r 2d6 #positifs]] ou à [[/r 3d6 #positifs]] si le sort est au moins du niveau 8.</p>
+<p>Si le sort de Guérison est d'au moins du niveau 5, ces dégâts passent à [[/r 2d6 #positifs]] ou à [[/r 3d6 #positifs]] si le sort est au moins du niveau 8.</p>
+<p>@Compendium[pf2e.feat-effects.cH8JD3ub4eEKuIAD]{Effet: Imprégnation irradiante}</p>
