--- a/data/feats/class-04-K3TasgeZLJQ84qtZ.htm
+++ b/data/feats/class-04-K3TasgeZLJQ84qtZ.htm
@@ -6,7 +6,7 @@ PrereqFR: lignage qui accorde des sorts primordiaux
 
 ------ Benefits and spoiler ----
 Benefits: You can call upon the creatures of the wild for aid.
-Avantage: Vous pouvez demander de l'aide aux créatures de la nature.
+Avantage: Vous obtenez un emplacement de sort pour lancer un sort de Convocation d'animal ou de plante.
 
 ------ Description (en) ------
 <p>You can call upon the creatures of the wild for aid. You gain an additional spell slot of your highest level, which you can use only to cast @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Summon Animal} or @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Summon Plant or Fungus}. You can cast either of these spells using that spell slot, even if it they aren't in your spell repertoire.</p>
