--- a/data/feats/class-04-jBeuyq0Aged45YAc.htm
+++ b/data/feats/class-04-jBeuyq0Aged45YAc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned how to make your personal energy last just a little bit longer when quickly brewing ad hoc concoctions.
-Avantage: Vous avez appris à faire durer votre énergie personnelle juste un peu plus longtemps lorsque vous préparez rapidement des concoctions ad hoc.
+Avantage: L'efficacité de vos outils et élixirs alchimiques dure jusqu'à la fin de votre prochain tour.
 
 ------ Description (en) ------
 <p>You've learned how to make your personal energy last just a little bit longer when quickly brewing ad hoc concoctions. When using Quick Alchemy to create an alchemical tool or elixir, that tool or elixir remains potent until the end of your next turn, instead of losing its potency at the start of your next turn.</p>
