--- a/data/feats/class-04-jQ8JntOdBFHPw5S4.htm
+++ b/data/feats/class-04-jQ8JntOdBFHPw5S4.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned to call upon light to reveal what is hidden.
-Avantage: Vous avez appris à faire appel à la lumière pour révéler ce qui est caché.
+Avantage: Vous avez appris le sort de révélation Lumière de révélation.
 
 ------ Description (en) ------
 <p>You've learned to call upon light to reveal what is hidden. You gain the @Compendium[pf2e.spells-srd.ou56ShiFH7GWF8hX]{Light of Revelation}devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à faire appel à la lumière pour vous révéler ce qui est caché. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.ou56ShiFH7GWF8hX]{lumière de révélation}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
+<p>Vous avez appris à faire appel à la lumière pour vous révéler ce qui est caché. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.ou56ShiFH7GWF8hX]{Lumière de révélation}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
