--- a/data/feats/class-04-LJw5tRrX0dMnm9Vq.htm
+++ b/data/feats/class-04-LJw5tRrX0dMnm9Vq.htm
@@ -6,7 +6,7 @@ PrereqFR: sorts de gardien
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to the healing properties of nature and can produce a magical mist to heal damage and stop burning or bleeding.
-Avantage: Vous avez un lien avec les propriétés curatives de la nature et pouvez produire une brume magique pour soigner les dommages et arrêter les brûlures ou les saignements.
+Avantage: Vous obtenez le sort de gardien Brume apaisante.
 
 ------ Description (en) ------
 <p>You have a connection to the healing properties of nature and can produce a magical mist to heal damage and stop burning or bleeding. You gain the @Compendium[pf2e.spells-srd.RGBZrVRIEDb2G48h]{Soothing Mist} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
