--- a/data/feats/class-04-NHheDmNB7L4REmlr.htm
+++ b/data/feats/class-04-NHheDmNB7L4REmlr.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You swagger readily into any fight—even an ambush.
-Avantage: Vous vous lancez facilement dans n'importe quel combat, même dans une embuscade.
+Avantage: Vous obtenez un bonus de circonstances de +2 au résultat de votre initiative et pouvez dégainer.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are about to roll initiative.</p>
