--- a/data/feats/class-04-m4FOYkzuqNjU0ETq.htm
+++ b/data/feats/class-04-m4FOYkzuqNjU0ETq.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your nails are supernaturally long and sharp.
-Avantage: Vos ongles sont surnaturellement longs et pointus.
+Avantage: Vous obtenez une attaque à mains nues d'ongles qui inflige 1d6 dégâts tranchants.
 
 ------ Description (en) ------
 <p>Your nails are supernaturally long and sharp.</p>
