--- a/data/feats/class-04-meQJfsKVar9tm6c9.htm
+++ b/data/feats/class-04-meQJfsKVar9tm6c9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can reload your weapon on the move.
-Avantage: Vous pouvez recharger votre arme en mouvement.
+Avantage: Vous pouvez recharger votre arme en vous déplaçant.
 
 ------ Description (en) ------
 <p>You can reload your weapon on the move. You Stride, Step, or Sneak, then Interact to reload.</p>
