--- a/data/feats/class-04-oGu9AtUAx0SpRXy8.htm
+++ b/data/feats/class-04-oGu9AtUAx0SpRXy8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have studied a specific type of wild creature and can hunt it more easily.
-Avantage: Vous avez étudié un type spécifique de créature sauvage et pouvez le chasser plus facilement.
+Avantage: En voyant un ennemi choisi, vous pouvez Chasser une proie.
 
 ------ Description (en) ------
 <p>You have studied a specific type of wild creature and can hunt it more easily. When you gain this feat, choose animals, beasts, dragons, or both fungi and plants as your favored enemy.</p>
