--- a/data/feats/class-04-oHdUwzUUblg3neCT.htm
+++ b/data/feats/class-04-oHdUwzUUblg3neCT.htm
@@ -2,12 +2,11 @@ Name: Order Magic
 Nom: Magie des ordres
 PrereqEN: Order Explorer
 PrereqFR: Explorateur des ordres
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have delved deeper into the teaching of a new order, gaining access to a coveted order spell.
-Avantage: L'étude d'un nouvel ordre vous révèle un sort d'ordre convoité
+Avantage: Vous gagnez le sort initial d'un autre ordre de druide.
 
 ------ Description (en) ------
 <p>You have delved deeper into the teaching of a new order, gaining access to a coveted order spell. Choose an order you have selected with @Compendium[pf2e.feats-srd.9onf3uGvZRnNLPR6]{Order Explorer}. You gain the initial order spell from that order.</p>
