--- a/data/feats/class-04-oIE88rIDEFNm83Mr.htm
+++ b/data/feats/class-04-oIE88rIDEFNm83Mr.htm
@@ -2,12 +2,11 @@ Name: Powerful Shove
 Nom: Poussée en puissance
 PrereqEN: Aggressive Block or Brutish Shove
 PrereqFR: Blocage agressif ou Poussée brutale
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can push larger foes around with your attack.
-Avantage: Vos attaques peuvent repousser des adversaires plus grands que vous.
+Avantage: Vous pouvez utiliser Blocage agressif ou Poussée brutale contre une créature de deux catégories de taille de plus que vous au maximum.
 
 ------ Description (en) ------
 <p>You can push larger foes around with your attack. You can use @Compendium[pf2e.feats-srd.19OLlTrxvEtDAOHc]{Aggressive Block} or @Compendium[pf2e.feats-srd.gt9pvIicabSOe6pB]{Brutish Shove} against a creature up to two sizes larger than you.</p>
