--- a/data/feats/class-04-N4TpzEzuFbInSgvz.htm
+++ b/data/feats/class-04-N4TpzEzuFbInSgvz.htm
@@ -6,7 +6,7 @@ PrereqFR: sorts de gardien
 
 ------ Benefits and spoiler ----
 Benefits: Your recollection of monsters is magically enhanced by luck.
-Avantage: Votre souvenir des monstres est magiquement amélioré par la chance.
+Avantage: Vous obtenez le sort de gardien Chance du chasseur.
 
 ------ Description (en) ------
 <p>Your recollection of monsters is magically enhanced by luck. You gain the @Compendium[pf2e.spells-srd.GfrKNJ9pNeATiKCc]{Hunter's Luck} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
