--- a/data/feats/class-04-NagTqSLK8bAlo2nY.htm
+++ b/data/feats/class-04-NagTqSLK8bAlo2nY.htm
@@ -4,6 +4,10 @@ PrereqEN: Charisma 14|second mark member of the Firebrands
 PrereqFR: Charisme 14|membre de second rang des Agitateurs vantards
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Votre vantardise à réussir un test de compétence vous permet d'obtenir un bonus de circonstance avec cette compétence.
+
 ------ Description (en) ------
 <div></div>
 <hr />
