--- a/data/feats/class-04-kqW6d3Dfk4nApd7y.htm
+++ b/data/feats/class-04-kqW6d3Dfk4nApd7y.htm
@@ -7,7 +7,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You use a performer's cold reading techniques, aura reading, and other tricks to discover your foe's strengths and weaknesses.
-Avantage: Vous utilisez les techniques de lecture à froid d'artiste, la lecture des auras et autres astuces pour découvrir les faiblesses et les forces de vos ennemis
+Avantage: Votre examen occulte d'un ennemi au combat révèle ses forces et ses faiblesses.
 
 ------ Description (en) ------
 <p>You use a performer's cold reading techniques, aura reading, and other tricks to discover your foe's strengths and weaknesses.</p>
@@ -20,6 +20,6 @@ Avantage: Vous utilisez les techniques de lecture à froid d'artiste, la lecture
 <p>Vous utilisez les techniques de lecture à froid de l'artiste, la lecture des auras et autres astuces pour découvrir les faiblesses et les forces de vos ennemis.</p>
 <p>Le MJ lance un test secret d'Occultisme pour vous contre le DD de Duperie ou de Discrétion (celui qui est le plus élevé) d'un ennemi de votre choix qui est engagé en combat et qui n'est pas @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué}, @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non-détecté}. Le MJ pourrait appliquer des pénalités en fonction de la distance entre vous et l'ennemi. L'ennemi est alors temporairement immunisé à votre lecture du Combat pendant 1 journée.</p>
 <hr />
-<p><strong>Succès critique</strong> Le MJ choisit et vous donne deux des informations suivantes à propos de votre ennemi : quelle est sa plus grande faiblesse, quel est son modificateur de jet de protection le plus bas, une immunité que l'ennemis possède ou quelle résistance de votre ennemi est la plus haute. En cas d'égalité, le MJ en choisit une de manière aléatoire.</p>
+<p><strong>Succès critique</strong> Le MJ choisit et vous donne deux des informations suivantes à propos de votre ennemi : quelle est sa plus grande faiblesse, quel est son modificateur de jet de protection le plus bas, une immunité que l'ennemi possède ou quelle résistance de votre ennemi est la plus haute. En cas d'égalité, le MJ en choisit une de manière aléatoire.</p>
 <p><strong>Succès</strong> Le MJ donne une unique information tirée de la liste ci-dessus à propos de l'ennemi.</p>
 <p><strong>Échec critique</strong> Le MJ vous donne une fausse information (le MJ maquille l'information).</p>
