--- a/data/feats/class-04-lKgpe2JKaeLjgnYF.htm
+++ b/data/feats/class-04-lKgpe2JKaeLjgnYF.htm
@@ -6,7 +6,7 @@ PrereqFR: ordre de la feuille
 
 ------ Benefits and spoiler ----
 Benefits: You can always find a path, almost as if foliage parted before you.
-Avantage: Vous pouvez toujours trouver un chemin, presque comme si le feuillage se séparait devant vous.
+Avantage: Vous ignorez le terrain difficile lié aux plantes mêmes magiques.
 
 ------ Description (en) ------
 <p>You can always find a path, almost as if foliage parted before you. You ignore any difficult terrain caused by plants, such as bushes, vines, and undergrowth. Even plants manipulated by magic don't impede your progress.</p>
