--- a/data/feats/class-04-o5q9FBrPsAYqEl5w.htm
+++ b/data/feats/class-04-o5q9FBrPsAYqEl5w.htm
@@ -2,12 +2,11 @@ Name: Channel Smite
 Nom: Châtiment canalisé
 PrereqEN: harmful font or healing font
 PrereqFR: source de mise à mal ou source de guérison
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You siphon the destructive energies of positive or negative energy through a melee attack and into your foe.
-Avantage: Vous siphonner l'énergie positive ou négative au cours d'une attaque de corps-à-corps.
+Avantage: Vous infligez des dégâts positifs ou négatifs avec une Frappe en puisant dans votre source divine.
 
 ------ Description (en) ------
 <p><strong>Cost</strong> Expend a @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Harm} or @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell.</p>
@@ -16,7 +15,7 @@ Avantage: Vous siphonner l'énergie positive ou négative au cours d'une attaque
 <p>Make a melee Strike and add the spell's damage to the Strike's damage.</p>
 <p>This is negative damage if you expended a <em>harm</em> spell or positive damage if you expended a <em>heal</em> spell. The spell is expended with no effect if your Strike fails or hits a creature that isn't damaged by that energy type (such as if you hit a non-undead creature with a <em>heal</em> spell).</p>
 ------ Description (fr) ------
-<p><strong>Coût</strong> Dépensez un sort de mise à mal ou guérison.</p>
+<p><strong>Coût</strong> Dépensez un sort de @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Mise à mal} ou @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison}.</p>
 <hr />
 <p>Vous siphonnez la puissance destructrice de l’énergie positive ou négative que vous injectez ensuite dans votre adversaire par le biais d’une attaque au corps à corps.</p>
-<p>Effectuez une Frappe au corps à corps et ajoutez les dégâts du sort à ceux de la Frappe. Ce sont des dégâts négatifs si vous dépensez une @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Mise à mal} ou des dégâts positifs si vous dépensez une @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison}. Le sort est dépensé sans produire d’effet si votre Frappe échoue ou touche une créature qui ne peut pas être blessée par le type d’énergie en question (si vous réussissez à frapper une créature autre qu’un mort‑vivant avec le sort guérison, par exemple).</p>
+<p>Effectuez une Frappe au corps à corps et ajoutez les dégâts du sort à ceux de la Frappe. Ce sont des dégâts négatifs si vous dépensez une @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Mise à mal} ou des dégâts positifs si vous dépensez une @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison}. Le sort est dépensé sans produire d’effet si votre Frappe échoue ou touche une créature qui ne peut pas être blessée par le type d’énergie en question (si vous réussissez à frapper une créature autre qu’un mort‑vivant avec le sort Guérison, par exemple).</p>
