--- a/data/equipment/consumable-01-hGw7Q1y2IEXRGAfv.htm
+++ b/data/equipment/consumable-01-hGw7Q1y2IEXRGAfv.htm
@@ -13,5 +13,5 @@ Nom: Potion de Gecko
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <hr />
 <p>La potion de Gecko contient un liquide brun dans laquelles flottent en suspension des grains de sable. Dès que vous buvez la potion, la pointes de vos doigts s'ornent de milliers de petits poils microscopiques qui collent aux objets.</p>
-<p><strong>Avantages</strong> Vous gagnez un bonus d'objet de +1 à vos jets pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} et @Compendium[pf2e.actionspf2e.ijZ0DDFpMkWqaShd]{Escamoter un objet} ainsi qu'à votre jet de Réflexe pour contrer @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmement}.</p>
+<p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +1 à vos jets pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} et @Compendium[pf2e.actionspf2e.ijZ0DDFpMkWqaShd]{Escamoter un objet} ainsi qu'à votre jet de Réflexe pour contrer @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmement}.</p>
 <p><strong>Durée</strong> 5 minutes.</p>
