dons de classe 04

--- a/data/feats/class-04-PwcmmJOLY8C9JHau.htm
+++ b/data/feats/class-04-PwcmmJOLY8C9JHau.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You shoot twice in blindingly fast succession.
-Avantage: Vous tirez deux fois de suite à une vitesse aveuglante.
+Avantage: Vous faites deux Frappes à distance contre deux cibles avec un malus de -2 à l'attaque.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a ranged weapon with reload 0</p>
