--- a/data/feats/class-04-r6dvGxru3FWNLVE2.htm
+++ b/data/feats/class-04-r6dvGxru3FWNLVE2.htm
@@ -6,10 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your experience in the field has taught you how to focus your aim at a distance.
-Avantage: Votre expérience sur le terrain vous a appris à cibler votre objectif à distance.
+Avantage: Vous doublez les facteurs de portée de vos armes.
 
 ------ Description (en) ------
 <p>Your experience in the field has taught you how to focus your aim at a distance, increasing your accuracy. Double your weapons' range increments.</p>
 ------ Description (fr) ------
-<p>Votre expérience sur le terrain vous a appris à vous concentrer sur votre visée pour améliorer votre précision lorsque vous tirez à longue distance.</p>
-<p>Doublez les facteurs de portée de votre arme.</p>
+<p>Votre expérience sur le terrain vous a appris à vous concentrer sur votre visée pour améliorer votre précision lorsque vous tirez à longue distance. Doublez les facteurs de portée de votre arme.</p>
