--- a/data/feats/class-04-sgaqlDFTVC7Ryurt.htm
+++ b/data/feats/class-04-sgaqlDFTVC7Ryurt.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your reflexes allow you to deflect ranged attacks.
-Avantage: Vos réflexes vous permettent de dévier les attaques à distance.
+Avantage: Vous obtenez un bonus de circonstances de +4 contre les attaques à distance physiques.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are the target of a physical ranged attack.</p>
