--- a/data/feats/class-04-sv3ywEHaab9oZ3Nj.htm
+++ b/data/feats/class-04-sv3ywEHaab9oZ3Nj.htm
@@ -6,7 +6,7 @@ PrereqFR: Combattant (Muse de barde)
 
 ------ Benefits and spoiler ----
 Benefits: With a rousing call, you exhort an ally to advance.
-Avantage: Avec un appel enthousiaste, vous exhortez un allié à avancer.
+Avantage: Inspiration vaillante permet à un allié de Marcher rapidement.
 
 ------ Description (en) ------
 <p>With a rousing call, you exhort an ally to advance. If your next action is to cast the @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{Inspire Courage} composition cantrip, one ally who gains a status bonus from the spell can immediately use a reaction to @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Stride}.</p>
