--- a/data/feats/class-04-tIE2umG4rQOxm8D8.htm
+++ b/data/feats/class-04-tIE2umG4rQOxm8D8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With a great heave, you seize a piece of your surroundings, such as a boulder, log, table, wagon, or chunk of earth, and hurl it at your foes.
-Avantage: Avec un grand soulèvement, vous saisissez un élément de votre environnement, comme un rocher, un rondin, une table, un chariot ou un morceau de terre, et le lancez sur vos ennemis.
+Avantage: Une arme improvisée vous permet de porter une attaque à distance qui inflige 1d10 dégâts contondants ou davantage.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have one or more hands free.</p>
@@ -17,7 +17,7 @@ Avantage: Avec un grand soulèvement, vous saisissez un élément de votre envir
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous avez au moins une main libre.</p>
 <hr />
-<p>Avec un grand effort de soulèvement, vous saisissez un morceau de votre environnement, comme un rocher, un tronc, une table, un chariot ou des morceaux de terre et le lancez sur vos adversaires.</p>
+<p>Avec un grand effort de soulèvement, vous saisissez un morceau de votre environnement, comme un rocher, un rondin, une table, un chariot ou des morceaux de terre et le lancez sur vos adversaires.</p>
 <p>L'objet doit être de votre taille ou d'une taille inférieure et son Encombrement ne doit pas être important pour que vous puissiez le soulever de son lieu initial.</p>
-<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} à distance avec l'objet; quel que soit le résultat, l'objet subit un montant de dégâts égal à celui qu'il infligerait en cas de succès.</p>
+<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} à distance avec l'objet ; quel que soit le résultat, l'objet subit un montant de dégâts égal à celui qu'il infligerait en cas de succès.</p>
 <p>L'objet est une arme à distance simple qui inflige [[/r 1d10 #contondant]] dégâts contondants, possède un facteur de portée de 6 m et a le trait arme de jet. Les dégâts passent à [[/r 2d10 #contondants]] si vous avez @Compendium[pf2e.classfeatures.9EqIasqfI8YIM3Pt]{Spécialisation martiale} avec les armes simples ou [[/r 3d10 #contondants]] si vous possédez @Compendium[pf2e.classfeatures.7JjhxMFo8DMwpGx0]{Spécialisation martiale supérieure}.</p>
