--- a/data/feats/class-04-PH5b61x3iJSKP3Xi.htm
+++ b/data/feats/class-04-PH5b61x3iJSKP3Xi.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Acrobaties et avec les armures intermédiaires
 
 ------ Benefits and spoiler ----
 Benefits: Surprisingly agile even in a breastplate and carrying a full rucksack, Marcos Farabellus developed this evasive maneuver during one of his many adventures
-Avantage: Étonnamment agile, même avec une cuirasse et un sac à dos complet, Marcos Farabellus a mis au point cette manœuvre d'évitement au cours de l'une de ses nombreuses aventures.
+Avantage: vous obtenez un bonus de circonstances de +2 à votre CA contre une Frappe au corps-à-corps et pouvez Faire un pas.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An enemy targets you with a melee Strike.</p>
