--- a/data/feats/class-04-RsluSLtSWq1vN8Hc.htm
+++ b/data/feats/class-04-RsluSLtSWq1vN8Hc.htm
@@ -2,12 +2,11 @@ Name: Form Control
 Nom: Contrôle de la forme
 PrereqEN: Strength 14|Wild Shape
 PrereqFR: Force 14|Morphologie sauvage
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: With additional care and effort, you can take on an alternate form for a longer period of time.
-Avantage: Vos efforts et vos précautions prolongent la durée de vos transformations.
+Avantage: Vous prolongez la durée de vos transformations en échange de leur puissance.
 
 ------ Description (en) ------
 <p>With additional care and effort, you can take on an alternate form for a longer period of time.</p>
