--- a/data/feats/class-04-SnIx3FhBuuq6AZD0.htm
+++ b/data/feats/class-04-SnIx3FhBuuq6AZD0.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You turn your foes’ flanking against them with a quick reverse.
-Avantage: Vous retournez le flanc de vos ennemis contre eux avec un revers rapide.
+Avantage: Vous Frappez les ennemis qui vous prennent en tenaille.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are flanked by at least two enemies</p>
