--- a/data/feats/class-04-pCVegyXxNibF4ulp.htm
+++ b/data/feats/class-04-pCVegyXxNibF4ulp.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You embellish your spellcasting with entrancing flourishes and grand pronouncements, making it harder to identify or counter.
-Avantage: Vous embellissez vos sorts avec des fioritures envoûtantes et de grandes déclarations, ce qui les rend plus difficiles à identifier ou à contrer.
+Avantage: Vos adversaires ont du mal à identifier et contrer vos sorts.
 
 ------ Description (en) ------
 <p>You embellish your spellcasting with entrancing flourishes and grand pronouncements, making it harder to identify or counter.</p>
@@ -15,4 +15,4 @@ Avantage: Vous embellissez vos sorts avec des fioritures envoûtantes et de gran
 ------ Description (fr) ------
 <p>Vous embellissez vos sorts avec des fioritures envoûtantes et de grandes déclamations, ce qui les rend plus diciles à identifier ou à contrer.</p>
 <p>Si la prochaine action que vous utilisez consiste à @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort}, les créatures disposant de la capacité de Lancer ce sort ne savent pas automatiquement quel est le sort.</p>
-<p>De plus, les créatures qui sont témoins du lancement de votre sort subissent une pénalité de circonstance de -2 pour les tests pour  @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir} et aux test pour contrer le sort lors de son incantation (comme avec @Compendium[pf2e.feats-srd.EpBG4CFMNSZQx7vI]{Contresort}).</p>
+<p>De plus, les créatures qui sont témoins du lancement de votre sort subissent une pénalité de circonstances de -2 pour les tests pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir} et aux test pour contrer le sort lors de son incantation (comme avec @Compendium[pf2e.feats-srd.EpBG4CFMNSZQx7vI]{Contresort}).</p>
