--- a/data/feats/class-04-qav9ec9cR4lFcz3C.htm
+++ b/data/feats/class-04-qav9ec9cR4lFcz3C.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Make a melee Strike against your prey.
-Avantage: Faites un coup de mêlée contre votre proie.
+Avantage: Un coup critique au corps à corps interrompt l'action de votre adversaire.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your hunted prey is within your reach, and it uses a manipulate action, uses a move action, or leaves a square during a move action it's using.</p>
