--- a/data/feats/class-04-sEWYOllJ6rYoXK4K.htm
+++ b/data/feats/class-04-sEWYOllJ6rYoXK4K.htm
@@ -2,14 +2,12 @@ Name: Raging Athlete
 Nom: Athlète enragé
 PrereqEN: |expert in Athletics
 PrereqFR: expert en Athlétisme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Physical obstacles can’t hold back your fury.
-Avantage: Les obstacles physiques ne peuvent pas retenir ta fureur.
------- Benefits and spoiler ----
-Avantage: Les obstacles physiques ne peuvent pas retenir ta fureur.
+Avantage: Vous obtenez une vitesse d'Escalade et de nage en rage.
+
 ------ Description (en) ------
 <p>Physical obstacles can't hold back your fury. While you are raging, you gain a climb Speed and swim Speed equal to your land Speed and the DC of High Jumps and Long Jumps decreases by 10. Your distance for a vertical Leap increases by 5 feet vertically, and your distance for a horizontal Leap increases to 15 feet if your Speed is at least 15 feet and to 20 feet if your Speed is at least 30 feet.</p>
 ------ Description (fr) ------
