--- a/data/feats/class-04-sahJHnojXO9eEXVE.htm
+++ b/data/feats/class-04-sahJHnojXO9eEXVE.htm
@@ -2,12 +2,11 @@ Name: Inspire Defense
 Nom: Inspiration défensive
 PrereqEN: maestro muse
 PrereqFR: muse virtuose
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You learn to protect yourself and your allies with your performance.
-Avantage: Vos tours de magie de composition vous protègent ainsi que vos alliés
+Avantage: Vous apprenez le tour de magie de composition Inspiration défensive.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.bH0kPuf7UKxRvi2P]{Inspire Defense} composition cantrip, which protects you and allies.</p>
