--- a/data/feats/class-04-tHqlcgcxHXzqLHPZ.htm
+++ b/data/feats/class-04-tHqlcgcxHXzqLHPZ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: When your shield is up, your enemies’ blows can’t touch you.
-Avantage: Lorsque votre bouclier est levé, les coups de vos ennemis ne peuvent pas vous toucher.
+Avantage: Lorsque votre bouclier est levé, vous pouvez vous déplacer à mi-vitesse sans déclencher de réaction.
 
 ------ Description (en) ------
 <p>When your shield is up, your enemies' blows can't touch you. When you have your shield raised, you can Stride to move half your Speed without triggering reactions that are triggered by your movement (such as Attacks of Opportunity). You can use Shielded Stride while Flying or Swimming instead of Striding if you have the corresponding movement type.</p>
