--- a/data/equipment/consumable-01-jlFx4JIBKJuaINpv.htm
+++ b/data/equipment/consumable-01-jlFx4JIBKJuaINpv.htm
@@ -8,7 +8,7 @@ Nom: Potion de la Mémoire partagée
 <p>A potion of shared memories can transfer recollections from one creature to another. To place a memory in the potion, you must hold the vial and focus on a particular memory for 1 minute. This memory must be of a single event, location, person, or otherwise encompass a span of about 1 minute. The clear fluid takes on a shimmering hue reminiscent of the stored memory and gains a slightly sweet taste.</p>
 <p>Upon consuming the potion, the drinker vividly recalls the memory, and thereafter can remember it as easily as a memory they actually experienced. An unwilling drinker can refuse to absorb the memory.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <hr />
 <p>Une potion de la mémoire partagée peut transférer des souvenirs d'une créature à une autre. Pour placer un souvenir dans la potion, vous devez tenir la fiole et vous concentrer sur un souvenir particulier pendant 1 minute. Ce souvenir doit concerner un seul événement, un seul lieu, une seule personne ou s'étendre sur une durée d'environ 1 minute. Le fluide clair prend une teinte chatoyante rappelant le souvenir stocké et acquiert un goût légèrement sucré.</p>
 <p>Après avoir consommé la potion, le buveur se rappelle vivement du souvenir stocké, et peut ensuite l'évoquer aussi facilement qu'un moment qu'il a réellement vécu. Un buveur réticent peut refuser d'absorber la potion de la Mémoire partagée.</p>
