--- a/data/feats/class-04-TORYSZMLMAGgsSEW.htm
+++ b/data/feats/class-04-TORYSZMLMAGgsSEW.htm
@@ -2,14 +2,12 @@ Name: Companion's Cry
 Nom: Appel au compagnon
 PrereqEN: |an animal companion
 PrereqFR: un compagnon animal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can urge your companion to do its utmost.
-Avantage: Vous encouragez votre compagnon à faire le maximum
------- Benefits and spoiler ----
-Avantage: Vous encouragez votre compagnon à faire le maximum
+Avantage: Vous dépensez 2 actions pour donner une action supplémentaire à votre compagnon animal.
+
 ------ Description (en) ------
 <p>You can urge your companion to do its utmost. You can spend 2 actions to @Compendium[pf2e.actionspf2e.q9nbyIF0PEBqMtYe]{Command an Animal} instead of 1 when commanding your animal companion. If you do, your animal companion uses an additional action.</p>
 ------ Description (fr) ------
