--- a/data/feats/class-04-vQ4DNfpktmaqdgdM.htm
+++ b/data/feats/class-04-vQ4DNfpktmaqdgdM.htm
@@ -6,7 +6,7 @@ PrereqFR: Initié du domaine
 
 ------ Benefits and spoiler ----
 Benefits: You have long venerated one of your deity’s lesser-known aspects
-Avantage: Vous avez longtemps vénéré l'un des aspects les moins connus de votre divinité.
+Avantage: Vous obtenez accès à un domaine et apprenez le sort initial de ce domaine.
 
 ------ Description (en) ------
 <p>You have long venerated one of your deity's lesser-known aspects. Select one domain from your deity's alternate domains. You gain access to that domain and an initial domain spell for that domain.</p>
