--- a/data/feats/class-04-TNpoEG0cUEAuSju7.htm
+++ b/data/feats/class-04-TNpoEG0cUEAuSju7.htm
@@ -2,12 +2,11 @@ Name: Sun Blade
 Nom: Lame solaire
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can unleash burning sunlight from your sword or spear.
-Avantage: Vous déchaînez la lumière du soleil avec votre épée ou votre lance.
+Avantage: Vous obtenez le sort de dévotion Lame solaire.
 
 ------ Description (en) ------
 <p><strong>Access</strong> The following class feat is available to Knights of Lastwall.</p>
@@ -15,4 +14,6 @@ Avantage: Vous déchaînez la lumière du soleil avec votre épée ou votre lanc
 <p>You can unleash burning sunlight from your sword or spear.</p>
 <p>You gain the @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{Sun Blade} devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous pouvez déchaîner la lumière du soleil avec votre épée ou votre lance. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{lame solaire}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
+<p><strong>Accès</strong> Le don de classe suivant est accessible aux Chevalier de Dernier rempart.</p>
+<hr />
+<p>Vous pouvez déchaîner la lumière du soleil avec votre épée ou votre lance. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{Lame solaire}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
