--- a/data/feats/class-04-Tpcq3Lk7qEOZ3LDP.htm
+++ b/data/feats/class-04-Tpcq3Lk7qEOZ3LDP.htm
@@ -2,14 +2,12 @@ Name: Scout's Warning
 Nom: Avertissement de l'éclaireur
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You visually or audibly warn your allies of danger.
-Avantage: Vous avertissez visuellement ou auditivement vos alliés du danger.
------- Benefits and spoiler ----
-Avantage: Vous avertissez visuellement ou auditivement vos alliés du danger.
+Avantage: Vous conférez un bonus de +1 au jet d'initiative de vos alliés.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are about to roll a Perception or Survival check for initiative</p>
 <hr />
@@ -18,4 +16,5 @@ Avantage: Vous avertissez visuellement ou auditivement vos alliés du danger.
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous êtes sur le point de faire un test de Perception ou de Survie pour déterminer votre initiative.</p>
 <hr />
-<p>Vous avertissez vos alliés, visuellement ou oralement, d’un danger, et conférez à chacun un bonus de circonstances de +1 à son jet d’initiative. En fonction de la manière dont vous avez averti vos alliés (des gestes ou la voix), cette action possède le trait visuel ou audible.</p>
+<p>Vous avertissez vos alliés, visuellement ou verbalement, d’un danger et conférez à chacun un bonus de circonstances de +1 à leur jet d’initiative. En fonction de la manière dont vous avez averti vos alliés (des gestes ou la voix), cette action possède le trait visuel ou audible.</p>
+<p>@Compendium[pf2e.feat-effects.RxDDXK52lwyHXl7v]{Effet: Avertissement de l'éclaireur}</p>
