--- a/data/feats/class-04-UWG1USE0L2ZxEPiO.htm
+++ b/data/feats/class-04-UWG1USE0L2ZxEPiO.htm
@@ -2,14 +2,12 @@ Name: Wholeness of Body
 Nom: Plénitude physique
 PrereqEN: |ki spells
 PrereqFR: sorts ki
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can restore your health by tapping into your ki.
-Avantage: Vous pouvez restaurer votre santé en puisant dans votre ki.
------- Benefits and spoiler ----
-Avantage: Vous pouvez restaurer votre santé en puisant dans votre ki.
+Avantage: Vous obtenez le sort ki Plénitude physique.
+
 ------ Description (en) ------
 <p>You can restore your health by tapping into your ki. You gain the @Compendium[pf2e.spells-srd.qJZZdYBdNaWRJFER]{Wholeness of Body} ki spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
