--- a/data/feats/class-04-UjWLK86BgHxz3Itd.htm
+++ b/data/feats/class-04-UjWLK86BgHxz3Itd.htm
@@ -2,12 +2,11 @@ Name: Calculated Splash
 Nom: Éclaboussure calculée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have calculated all the angles to maximize a bomb’s splash.
-Avantage: Vous avez calculé tous les angles pour maximiser l'éclaboussement d'une bombe.
+Avantage: Les dégâts d'éclaboussure de vos bombres infligent des dégâts égaux à votre modificateur d'Intelligence.
 
 ------ Description (en) ------
 <p>You have calculated all the angles to maximize a bomb's splash. When you throw an alchemical bomb with the splash trait, you can cause the bomb to deal splash damage equal to your Intelligence modifier (minimum 0) instead of the normal amount.</p>
