--- a/data/feats/class-04-tWBK7Zbt80JlPryC.htm
+++ b/data/feats/class-04-tWBK7Zbt80JlPryC.htm
@@ -2,14 +2,12 @@ Name: Bespell Weapon
 Nom: Arme enchantée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You siphon the residual energy from the last spell you cast into one weapon you’re wielding.
-Avantage: Vous siphonnez l'énergie résiduelle du dernier sort que vous avez lancé dans l'arme que vous brandissez.
------- Benefits and spoiler ----
-Avantage: Vous siphonnez l'énergie résiduelle du dernier sort que vous avez lancé dans l'arme que vous brandissez.
+Avantage: Après avoir lancé un sort, votre arme inflige des dégâts magiques.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per turn</p>
 <p><strong>Requirements</strong> Your most recent action was to cast a non-cantrip spell.</p>
@@ -28,9 +26,9 @@ Avantage: Vous siphonnez l'énergie résiduelle du dernier sort que vous avez la
 <hr />
 <p>Vous siphonnez l’énergie résiduelle du dernier sort que vous avez lancé pour l’injecter dans une arme que vous maniez. Jusqu’à la fin de votre tour, cette arme inflige 1d6 dégâts supplémentaires d’un type dépendant de l’école du sort juste lancé.</p>
 <ul>
-<li><strong>Abjuration :</strong> dégâts de force,</li>
-<li><strong>Invocation ou transmutation :</strong> du même type que l'arme,</li>
-<li><strong>Divination, Enchantement ou Illusion :</strong> dégâts mentaux,</li>
-<li><strong>Évocation :</strong> un type de dégâts du sort ou des dégâts de force si le sort ne fait pas de dégâts,</li>
-<li><strong>Nécromancie :</strong> dégâts d'énergie négative.</li>
+<li><strong>Abjuration</strong> @Compendium[pf2e.feat-effects.GbbwJhwSNLw06XpO]{dégâts de force},</li>
+<li><strong>Invocation ou Transmutation</strong> @Compendium[pf2e.feat-effects.E8MiV00QEhH5n18L]{dégâts du même type que ceux de l'arme},</li>
+<li><strong>Divination, Enchantment ou Illusion</strong> @Compendium[pf2e.feat-effects.ZSgB3imGveukWUxs]{dégâts mentaux},</li>
+<li><strong>Évocation</strong> d'un type infligé par le sort ou @Compendium[pf2e.feat-effects.GbbwJhwSNLw06XpO]{dégâts de force} si le sort n'inflige pas de dégâts,</li>
+<li><strong>Nécromancyie</strong> @Compendium[pf2e.feat-effects.G1IRkppxJCYdfqXo]{dégâts négatifs}</li>
 </ul>
