--- a/data/feats/class-04-YJIzE2RhGRGfbt9j.htm
+++ b/data/feats/class-04-YJIzE2RhGRGfbt9j.htm
@@ -2,12 +2,11 @@ Name: Guardian's Deflection (Swashbuckler)
 Nom: Déviation du gardien (Bretteur)
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You use your weapon to deflect the attack against your ally, granting a +2 circumstance bonus to their AC against the triggering attack.
-Avantage: Vous utilisez votre arme pour dévier l'attaque contre votre allié.
+Avantage: Vous pouvez accorder un bonus de +2 à la CA à une créature adjacente.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally within your melee reach is hit by an attack, you can see the attacker, and a +2 circumstance bonus to AC would turn the critical hit into a hit or the hit into a miss.</p>
@@ -20,3 +19,4 @@ Avantage: Vous utilisez votre arme pour dévier l'attaque contre votre allié.
 <p><strong>Conditions</strong> Vous maniez une seule arme de corps à corps à une main et votre autre main (ou mains) est libre.</p>
 <hr />
 <p>Vous utilisez votre arme pour dévier l’attaque contre votre allié, ce qui lui confère un bonus de circonstances de +2 à sa CA contre l’attaque déclencheuse. Ceci transforme le coup critique déclencheur en un coup normal ou le coup déclencheur normal en un échec.</p>
+<p>@Compendium[pf2e.feat-effects.w6X7io56B2HHTOvs]{Effet: Déviation du Gardien}</p>
