--- a/data/feats/class-04-ZHPSASbvbbshq1zG.htm
+++ b/data/feats/class-04-ZHPSASbvbbshq1zG.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Représentation
 
 ------ Benefits and spoiler ----
 Benefits: You sweep your foe into your dance.
-Avantage: Vous balayez votre ennemi dans votre danse.
+Avantage: Vous déplacez votre ennemi avec vous en réussissant un test de Représentation.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are adjacent to an enemy.</p>
