--- a/data/feats/class-04-xXHwktc9SymSY8d6.htm
+++ b/data/feats/class-04-xXHwktc9SymSY8d6.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: By adding a special catalyst, you transform a healing elixir into a topical projectile.
-Avantage: En ajoutant un catalyseur spécial, vous transformez un élixir de soins en un projectile topique.
+Avantage: Vous pouvez transformer vos élixirs de soins en bombes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
