--- a/data/feats/class-04-WHOCaVobY7N3UTtA.htm
+++ b/data/feats/class-04-WHOCaVobY7N3UTtA.htm
@@ -6,7 +6,7 @@ PrereqFR: lignage qui accorde des sorts divins
 
 ------ Benefits and spoiler ----
 Benefits: The divine might provided by your bloodline flows through you.
-Avantage: La puissance divine fournie par votre lignée coule à travers vous.
+Avantage: Vous obtenez un emplacement de sort uniquement pour lancer Mise à mal ou Guérison.
 
 ------ Description (en) ------
 <p>The divine might provided by your bloodline fiows through you. You gain an additional spell slot of your highest level, which you can use only to cast your choice of heal or harm. You can cast either of these spells using that spell slot, even if they aren't in your spell repertoire.</p>
