--- a/data/feats/class-04-wz2edbLFnDKDNWWZ.htm
+++ b/data/feats/class-04-wz2edbLFnDKDNWWZ.htm
@@ -2,15 +2,13 @@ Name: Flurry of Maneuvers
 Nom: Déluges de manoeuvres
 PrereqEN: |expert in Athletics
 PrereqFR: expert en Athlétisme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You flurry is a combination of maneuvers.
-Avantage: Une rafale est une combinaison de manœuvres.
------- Benefits and spoiler ----
-Avantage: Une rafale est une combinaison de manœuvres.
+Avantage: Vous pouvez utiliser votre Déluge de coups pour Pousser, Saisir et faire des Croc-en-jambes.
+
 ------ Description (en) ------
 <p>You flurry is a combination of maneuvers. You can replace one or both of your attacks during a Flurry of Blows with @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Grapples}, @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shoves}, or @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Trips}.</p>
 ------ Description (fr) ------
-<p>Votre déluge est une combinaison de manœuvres. Vous pouvez remplacer l’une de vos attaques, ou les deux, lors d’un déluge de coups par des Saisies, des Poussées ou des Crocs‑en‑jambe.</p>
+<p>Votre déluge est une combinaison de manœuvres. Vous pouvez remplacer l’une de vos attaques, ou les deux, lors d’un déluge de coups par des @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisies}, des @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Poussées} ou des @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Crocs‑en‑jambe}.</p>
