--- a/data/feats/class-04-xYakFeP6olBsxpZN.htm
+++ b/data/feats/class-04-xYakFeP6olBsxpZN.htm
@@ -2,12 +2,11 @@ Name: Command Undead
 Nom: Contrôle des morts-vivants
 PrereqEN: harmful font|evil alignment
 PrereqFR: source de mise à mal|alignement mauvais
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You grasp the animating force within an undead creature and bend it to your will.
-Avantage: Vous saisissez la force d'animation d'une créature morte-vivante et la pliez à votre volonté.
+Avantage: En lançant Mise à mal, vous pouvez prendre le contrôle d'un mort-vivant plus faible.
 
 ------ Description (en) ------
 <p>You grasp the animating force within an undead creature and bend it to your will.</p>
@@ -20,7 +19,7 @@ Avantage: Vous saisissez la force d'animation d'une créature morte-vivante et l
 <p><strong>Failure</strong> The undead creature becomes a minion under your control. The spell gains a duration of 1 minute, but it is dismissed if you or an ally attacks the minion undead.</p>
 <p><strong>Critical Failure</strong> As failure, but the duration is 1 hour.</p>
 ------ Description (fr) ------
-<p>Vous saisissez la force qui circule dans le corps d’un mort‑vivant et qui permet de l’animer afin de le plier à votre volonté. Si la prochaine action que vous effectuez consiste à lancer mise à mal en prenant pour cible un mort‑vivant, vous transformez les effets de ce sort. Au lieu des effets normaux de mise à mal, vous contrôlez la cible si son niveau est égal ou inférieur au vôtre −3. Elle peut faire un jet de Volonté pour ne pas être contrôlée. Si elle est déjà sous le contrôle de quelqu’un d’autre, celui‑ci fait aussi un jet de sauvegarde et le mort‑vivant utilise le meilleur résultat.</p>
+<p>Vous saisissez la force qui circule dans le corps d’un mort‑vivant et qui permet de l’animer afin de le plier à votre volonté. Si la prochaine action que vous effectuez consiste à lancer Mise à mal en prenant pour cible un mort‑vivant, vous transformez les effets de ce sort. Au lieu des effets normaux de Mise à mal, vous contrôlez la cible si son niveau est égal ou inférieur au vôtre −3. Elle peut faire un jet de Volonté pour ne pas être contrôlée. Si elle est déjà sous le contrôle de quelqu’un d’autre, celui‑ci fait aussi un jet de sauvegarde et le mort‑vivant utilise le meilleur résultat.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible ne subit aucun effet et elle est temporairement immunisée pendant 24 h.</p>
 <p><strong>Succèss</strong> La cible n'est pas affectée.</p>
