--- a/data/feats/class-04-yozSCfdLFHVBbTxj.htm
+++ b/data/feats/class-04-yozSCfdLFHVBbTxj.htm
@@ -6,9 +6,9 @@ PrereqFR: Compagnon animal
 
 ------ Benefits and spoiler ----
 Benefits: Your animal companion grows up, becoming a mature animal companion, which grants it additional capabilities.
-Avantage: Votre compagnon animal grandit et devient un compagnon animal mature, ce qui lui confère des capacités supplémentaires.
+Avantage: Votre compagnon obtient des capacités supplémentaires.
 
 ------ Description (en) ------
 <p>Your animal companion grows up, becoming a mature animal companion, which grants it additional capabilities. See the animal companion rules on page 214 for more information. Your animal companion is better trained than most. During an encounter, even if you don't use the Command an Animal action, your animal companion can still use 1 action on your turn that round to Stride or Strike.</p>
 ------ Description (fr) ------
-<p>Votre compagnon animal grandit et il est à présent adulte, ce qui lui confère des capacités supplémentaires. Voir Les compagnons animaux pour plus d’informations. Votre compagnon animal est mieux dressé que la plupart. Lors d’une rencontre, même si vous n’effectuez pas l’action Diriger un animal, votre compagnon animal peut toujours effectuer une action à votre tour pour Marcher rapidement ou Frapper.</p>
+<p>Votre compagnon animal grandit et il est à présent adulte, ce qui lui confère des capacités supplémentaires. Votre compagnon animal est mieux dressé que la plupart. Lors d’une rencontre, même si vous n’effectuez pas l’action Diriger un animal, votre compagnon animal peut toujours effectuer une action à votre tour pour Marcher rapidement ou Frapper.</p>
