--- a/data/equipment/consumable-03-3iRTGS2vYXz7SBrn.htm
+++ b/data/equipment/consumable-03-3iRTGS2vYXz7SBrn.htm
@@ -14,7 +14,7 @@ Nom: Boursouflure bleue
 ------ Description (fr) ------
 <p>Cette maladie mangeuse de chair provoque des boursouflures bleues proéminentes et douloureuses sur la peau et les gencives. Vous ne pouvez pas réduire votre état de malade tant que vous êtes atteint par les boursouflures bleues.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 17 Vigueur</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 17;</p>
 <p><strong>Début</strong> 1 jour;</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (1 jour);</p>
 <p><strong>Stade 2</strong> Malade 1 et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 jour);</p>
